--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -1,4 +1,6 @@
-.login-form { padding-bottom: 10px; }
-.login-form label { margin-left: 10px; }
-.login-form button { width: 110px;}
-.login-form span {margin-left: 10px; }
+.login-form        { padding-bottom: 10px; }
+.login-form label  { margin-left: 10px; }
+.login-form button { width: 200px;}
+.login-form span   { margin-left: 10px; }
+body.cilogi-info   { padding-top:50px;}
+.cilogi-info h1.cilogi-title    { color: white; }
