minor mods for documentation purposes

--- a/src/main/resources/userEmail.mustache
+++ b/src/main/resources/userEmail.mustache
@@ -6,3 +6,7 @@
 <p>You will be logged in to the computer on which you click the link for 30 days
    or until you log off.  We do <em>not</em> store any passwords, we just keep
    track of your Email address.</p>
+
+<p>Please note that you are logged in using a cookie, so you need to allow (direct, not 3rd party)
+   cookies to use this service. If you don't know whether you use cookies then you do, unless perhaps
+   you're working inside a bank, or your children have access to your computer.</p>
